# multiple_speaker_podcast

./: pyproject.toml
multiple_speaker_podcast/: gen_multiple_speaker_podcast.ipynb
