[tool.poetry]
name = "multiple-speaker-podcast"
version = "0.1.0"
description = ""
authors = ["Anh Dung Pham <dungpham290198@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-genai = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
